# sika-trading

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: tests.yml
notebooks/: 1.0-cay-initial-investiny-data-exploration.ipynb
src/sikatrading/: __init__.py
